change to magnum

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="return_buy">Қайтару мүмкіндігі бар ма?</string>
     <string name="ga">Кепілдік бар ма?</string>
     <string name="sale">Жаппай сатылымдар қашан?</string>
-    <string name="softstore">SoftStore</string>
+    <string name="softstore">Magnum</string>
     <string name="ok">Растау</string>
     <string name="myCart">Мені дорбам</string>
     <string name="go_out">Шығу</string>
